*Empty MediaWiki Message*

--- a/ᎠᏂᏍᏫᏍ.mw
+++ b/ᎠᏂᏍᏫᏍ.mw
@@ -44,7 +44,7 @@
 |-
 |}
 
-<big>'''ᎠᏂᏍᏫᏏ'''</big> ([[ᎠᏂᏙᎢᏥ ᎧᏬᏂᎯᏍᏗ|ᏙᎢᏥ]]: ''die Schweizer'', [[ᎠᏂᎦᎸᏥ|ᎦᎸᏥ]]: ''les Suisses'', [[ᎠᏂᎢᏓᎵ|ᎢᏓᎵ]]: ''gli Svizzeri'', [[ᎶᎹᏂᏥ ᎧᏬᏂᎯᏍᏗ|ᎶᎹᏂᏥ]]: ''ils Svizzers'') ᎠᏂᏴᏩ [[ᏍᏫᏣᎳᏂ]] ᎡᎯ. ᎠᏂᏍᏫᏏ [[ᎠᏂᏙᎢᏥ ᎧᏬᏂᎯᏍᏗ|ᏙᎢᏥ]] ᎠᎴ [[ᎠᏂᎦᎸᏥ ᎧᏬᏂᎯᏍᏗ|ᎦᎸᏥ]] ᎠᎴ [[ᎠᏂᎢᏓᎵ ᎧᏬᏂᎯᏍᏗ|ᎢᏓᎵ]] ᎠᎴ [[ᎶᎹᏂᏥ]] ᎠᏂᏬᏂᎭ.
+<big>'''ᎠᏂᏍᏫᏏ'''</big> ([[ᎠᏂᏙᎢᏥ ᎧᏬᏂᎯᏍᏗ|ᏙᎢᏥ]]: ''die Schweizer'', [[ᎠᏂᎦᎸᏥ|ᎦᎸᏥ]]: ''les Suisses'', [[ᎠᏂᎢᏓᎵ|ᎢᏓᎵ]]: ''gli Svizzeri'', [[ᎶᎹᏂᏥ ᎧᏬᏂᎯᏍᏗ|ᎶᎹᏂᏥ]]: ''ils Svizzers'') ᎠᏂᏴᏫ [[ᏍᏫᏣᎳᏂ]] ᎡᎯ. ᎠᏂᏍᏫᏏ [[ᎠᏂᏙᎢᏥ ᎧᏬᏂᎯᏍᏗ|ᏙᎢᏥ]] ᎠᎴ [[ᎠᏂᎦᎸᏥ ᎧᏬᏂᎯᏍᏗ|ᎦᎸᏥ]] ᎠᎴ [[ᎠᏂᎢᏓᎵ ᎧᏬᏂᎯᏍᏗ|ᎢᏓᎵ]] ᎠᎴ [[ᎶᎹᏂᏥ]] ᎠᏂᏬᏂᎭ.
 
 [[Category:ᎠᏂᏴᏫ]]
 
