*Empty MediaWiki Message*

--- a/ᎠᏂᏣᎳᎩ.mw
+++ b/ᎠᏂᏣᎳᎩ.mw
@@ -26,7 +26,7 @@
 |-
 |}
 
-<big>'''ᎠᏂᏣᎳᎩ'''</big> ([[ᎩᎵᏏ]]: ''Cherokees'') ᎠᏂᏴᏩ [[ᎣᎦᎳᎰᎹ]] ᎠᎴ [[ᏔᎾᏏ]] ᎠᎴ [[ᎦᏯᎴᏂ]] ᎡᎯ. ᎠᏂᏣᎳᎩ [[ᎠᏂᏣᎳᎩ ᎧᏬᏂᎯᏍᏗ|ᏣᎳᎩ]] ᎠᏂᏬᏂᎭ.
+<big>'''ᎠᏂᏣᎳᎩ'''</big> ([[ᎩᎵᏏ]]: ''Cherokees'') ᎠᏂᏴᏫ [[ᎣᎦᎳᎰᎹ]] ᎠᎴ [[ᏔᎾᏏ]] ᎠᎴ [[ᎦᏯᎴᏂ]] ᎡᎯ. ᎠᏂᏣᎳᎩ [[ᎠᏂᏣᎳᎩ ᎧᏬᏂᎯᏍᏗ|ᏣᎳᎩ]] ᎠᏂᏬᏂᎭ.
 
 [[Category:ᎠᏂᏴᏫ]]
 
