*Empty MediaWiki Message*

--- a/ᎠᏂᏲᎾ.mw
+++ b/ᎠᏂᏲᎾ.mw
@@ -104,7 +104,7 @@
 |-
 |}
 
-<big>'''ᎠᏂᏲᎾ'''</big> ᎠᏂᏴᏩ [[ᏲᏂᏱ]] ᎡᎯ. ᎠᏂᏲᎾ [[ᎠᏂᏲᎾ ᎧᏬᏂᎯᏍᏗ|ᏲᏂ]] ᎠᏂᏬᏂᎭ.
+<big>'''ᎠᏂᏲᎾ'''</big> ᎠᏂᏴᏫ [[ᏲᏂᏱ]] ᎡᎯ. ᎠᏂᏲᎾ [[ᎠᏂᏲᎾ ᎧᏬᏂᎯᏍᏗ|ᏲᏂ]] ᎠᏂᏬᏂᎭ.
 
 [[Category:ᎠᏂᏴᏫ]]
 
