*Empty MediaWiki Message*

--- a/ᎠᏤᎷᎯᏍᏗ.mw
+++ b/ᎠᏤᎷᎯᏍᏗ.mw
@@ -1,4 +1,4 @@
 [[File:YanagisawaA9932J.JPG|thumb|right|250px|ᎠᏤᎷᎯᏍᏗ]]
-'''ᎠᏤᎷᎯᏍᏗ''' ᎨᏒᎢ [[ᏗᎧᏃᎩᏛ ᎬᏔᏂᏓᏍᏗ|ᏗᎧᏃᎩᏛ ᎦᏃᏢᎩ ᎪᎱᏍᏗ ᎬᏔᏂᏓᏍᏗ]].
+'''ᎠᏤᎷᎯᏍᏗ''' [[ᏗᎧᏃᎩᏛ ᎬᏔᏂᏓᏍᏗ]].
 
 [[en:Saxophone]]
