*Empty MediaWiki Message*

--- a/ᎹᏱᎩᎵ.mw
+++ b/ᎹᏱᎩᎵ.mw
@@ -11,7 +11,7 @@
 | ᎦᏛᎬᎢ =
 }}
 
-<big>'''ᎹᏱᎩᎵ'''</big> ᎠᎴ <big>'''ᎹᎦᎵ'''</big> ᏣᎳᎩ ᎠᏁᏢᏔᏅᎯ ᎩᎵᏏ ᏚᏙᎥ '''''Michael'''''.
+<big>'''ᎹᏱᎩᎵ'''</big><ref>Cherokee New Testament</ref> ᎠᎴ <big>'''ᎹᎦᎵ'''</big> ᏣᎳᎩ ᎠᏁᏢᏔᏅᎯ ᎩᎵᏏ ᏚᏙᎥ '''''Michael'''''.
 
 == ᏗᎦᏃᏣᎵ ᎠᏂᏴᏫ ==
 === ᎠᏂᏈᏌᏂᏘᏂ ᎤᏂᎬᏫᏳᎯ ᎡᏆ ===
@@ -25,6 +25,11 @@
 * [[Michael VIII Palaiologos|ᎹᏱᎩᎵ VIII ᏆᎴᎣᎶᎪᏏ]] (1223–1282)
 * [[Michael IX Palaiologos|ᎹᏱᎩᎵ IX ᏆᎴᎣᎶᎪᏏ]] (1277–1320), ᎤᏪᏥ [[Andronikos II Palaiologos|ᎡᏂᏗᎶᏂᎪᏏ II ᏆᎴᎣᎶᎪᏏ]]
 
+==ᏓᏓᏚᎬ==
+<references/>
+
+==ᏫᏓᏎᏄᎢ==
+*Cherokee New Testament. Tulsa Oklahoma, 1995
 
 [[af:Michael (naam)]]
 [[be:Імя Міхаіл]]
