*Empty MediaWiki Message*

--- a/ᏤᎩ_ᏍᎦᏚᎩ.mw
+++ b/ᏤᎩ_ᏍᎦᏚᎩ.mw
@@ -1,4 +1,4 @@
-[[File:Flag of the Czech Republic.svg|thumb|right|250px|]]
+[[File:Flag of the Czech Republic.svg|thumb|right|250px|ᎦᏓᏘ]]
 '''ᏤᎩᏱ''' ᏙᏱᏗᏢ ᎦᏚᎲ [[ᏳᎳᏈ|ᏳᎳᏉᎢ]].
 
 [[ru:Чехия]]
