*Empty MediaWiki Message*

--- a/ᏧᏁᏍᏓᎸᎯ.mw
+++ b/ᏧᏁᏍᏓᎸᎯ.mw
@@ -1,5 +1,27 @@
-[[File:Flag of Iceland.svg|thumb|right|250px|ᎦᏓᏘ]]
-'''ᎤᏁᏍᏓᎶᎢ''' ᏙᏱᏗᏢ ᎦᏚᎲ [[ᏳᎳᏈ|ᏳᎳᏉᎢ]].
+{{Infobox Country
+| Long name = Ísland
+| Name = ᎤᏁᏍᏓᎶᎢ
+| ᎦᏓᏘ = Flag of Iceland.svg
+| Coat of arms = Coat_of_arms_of_Iceland.svg
+| Location = Europe-Iceland.svg
+| ᎠᏰᎵᎤ ᎤᏒᎧᎵ ᎦᏬᏂᏏᏍᏗ = [[ᎠᏂᎤᏁᏍᏓᎳ ᎧᏬᏂᎯᏍᏗ|ᎤᏁᏍᏓᎵ]]
+| ᎠᏰᎵ ᏗᎦᎳᏫᎢᏍᏗ = [[Reykjavik|ᎴᎩᏯᏫᎩ]]
+| ᎤᏔᏂᎢᏍᏗ ᎦᏚᎲᎢ = ᎴᎩᏯᏫᎩ
+| ᏚᎬᏫᏳᎯ ᏂᎰᏂ = [[Ólafur Ragnar Grímsson|ᎣᎳᏩ ᎳᎩᎾ ᏈᎻᏌᏂ]] <br> [[Jóhanna Sigurðardóttir|ᏲᎭᎾ ᏏᎬᏓᏙᏔ]] <br> [[Ásta Ragnheiður Jóhannesdóttir|ᎠᏍᏔ ᎳᎨᏂᎮᏛ ᏲᎭᏁᏍᏙᏔ]]
+| ᎠᏕᎳ = [[ᎠᏂᎤᏁᏍᏓᎳ ᎠᏕᎳ]]
+}}
+
+<big>'''ᎤᏁᏍᏓᎶᎢ'''</big> ([[ᎠᏂᎤᏁᏍᏓᎳ ᎧᏬᏂᎯᏍᏗ|ᎤᏁᏍᏓᎵ]]: '''''Ísland'''''; [[ᎩᎵᏏ]]: '''''Iceland''''') ᏙᏱᏗᏢ ᎦᏚᎲ [[ᏳᎳᏈ|ᏳᎳᏉᎢ]].
+
+== ᏗᏓᏟᎶᏍᏔᏅ ==
+<gallery>
+File:Reykjavik,_Iceland-13July2011.jpg|[[ᎴᎩᏯᏫᎩ]]
+File:Iceland_Krona_Coins.jpg|[[ᏲᏂᏱ ᎠᏕᎳ]]
+File:Thorramatur.jpg|[[ᎠᏂᎤᏁᏍᏓᎳ ᎠᎵᏍᏓᏴᏗ]]
+</gallery>
+
+[[Category:ᏳᎳᏛ]]
+[[Category:ᎠᏰᎵ ᏚᎾᏙᏢᏩᏗᏒ]]
 
 [[ace:Islandia]]
 [[af:Ysland]]
