*Empty MediaWiki Message*

--- a/ᏗᏂᎹᎦ.mw
+++ b/ᏗᏂᎹᎦ.mw
@@ -1,5 +1,25 @@
-[[File:Flag of Denmark.svg|thumb|right|250px|ᎦᏓᏘ]]
-'''ᏕᏂᎹᎩ''' ᏙᏱᏗᏢ ᎦᏚᎲ [[ᏳᎳᏈ|ᏳᎳᏉᎢ]].
+{{Infobox Country
+| Long name = Kongeriget Danmark
+| Name = ᏕᏂᎹᎩ
+| ᎦᏓᏘ = Flag of Denmark.svg
+| Coat of arms = National_Coat_of_arms_of_Denmark.svg
+| Location = EU-Denmark.svg
+| ᎠᏰᎵᎤ ᎤᏒᎧᎵ ᎦᏬᏂᏏᏍᏗ = [[ᎠᏂᏕᏂ ᎧᏬᏂᎯᏍᏗ|ᏕᏂᏏ]] <br> [[ᎠᏂᎤᏃᏕᎾ ᎧᏬᏂᎯᏍᏗ|ᎤᏃᏕᎾ]] <br> [[ᎠᏂᎢᏤᏳᏍᏗ ᎧᏬᏂᎯᏍᏗ|ᎢᏤᏳᏍᏗ (ᎧᎳᏟ)]]
+| ᎠᏰᎵ ᏗᎦᎳᏫᎢᏍᏗ = [[Copenhagen|ᎪᏇᏂᎮᎨᏂ]]
+| ᎤᏔᏂᎢᏍᏗ ᎦᏚᎲᎢ = ᎪᏇᏂᎮᎨᏂ
+| ᏚᎬᏫᏳᎯ ᏂᎰᏂ = 	[[Margrethe II|ᎹᎦᏪᏘ II]] <br> [[Helle Thorning-Schmidt|ᎮᎳ ᏙᏂᏂᎩ-ᏍᎻᏘ]] <br> [[	Mogens Lykketoft|ᎼᎨᏂᏏ ᎵᎨᏔᏩᏘ]]
+| ᎠᏕᎳ = [[ᏕᏂᎹᎩ ᎠᏕᎳ]]
+}}
+
+<big>'''ᏕᏂᎹᎩ'''</big> ([[ᎠᏂᏕᏂ ᎧᏬᏂᎯᏍᏗ|ᏕᏂᏏ]]: '''''Kongeriget Danmark'''''; [[ᎩᎵᏏ]]: '''''Denmark''''') ᏙᏱᏗᏢ ᎦᏚᎲ [[ᏳᎳᏈ|ᏳᎳᏉᎢ]].
+
+== ᏗᏓᏟᎶᏍᏔᏅ ==
+<gallery>
+File:Copenhagen_Collage.jpg|[[ᎪᏇᏂᎮᎨᏂ]]
+File:Flickr_-_cyclonebill_-_Frikadeller_med_ristet_rugbrød_og_cornichons.jpg|[[ᎠᏂᏕᏂ ᎠᎵᏍᏓᏴᏗ]]
+</gallery>
+
+[[Category:ᏳᎳᏛ]]
 
 [[ace:Denmark]]
 [[af:Denemarke]]
