*Empty MediaWiki Message*

--- a/ᏤᎩ_ᏍᎦᏚᎩ.mw
+++ b/ᏤᎩ_ᏍᎦᏚᎩ.mw
@@ -1,5 +1,25 @@
-[[File:Flag of the Czech Republic.svg|thumb|right|250px|ᎦᏓᏘ]]
-'''ᏤᎩᏱ''' ᏙᏱᏗᏢ ᎦᏚᎲ [[ᏳᎳᏈ|ᏳᎳᏉᎢ]].
+{{Infobox Country
+| Long name = Česká republika
+| Name = ᏤᎩᏱ
+| ᎦᏓᏘ = Flag of the Czech Republic.svg
+| Coat of arms = Coat_of_arms_of_the_Czech_Republic.svg
+| Location = EU-Czechia.svg
+| ᎠᏰᎵᎤ ᎤᏒᎧᎵ ᎦᏬᏂᏏᏍᏗ = [[ᎠᏂᏤᎩ ᎧᏬᏂᎯᏍᏗ|ᏤᎩ]]
+| ᎠᏰᎵ ᏗᎦᎳᏫᎢᏍᏗ = [[Prague|ᏆᎩ]]
+| ᎤᏔᏂᎢᏍᏗ ᎦᏚᎲᎢ = ᏆᎩ
+| ᏚᎬᏫᏳᎯ ᏂᎰᏂ = [[Václav Klaus|ᏩᏥᎳᏫ ᏝᎤᏏ]] <br> [[Petr Nečas|ᏈᏓ ᏁᏣᏏ]]
+| ᎠᏕᎳ = [[ᏤᎩᏱ ᎠᏕᎳ]]
+}}
+
+<big>'''ᏤᎩᏱ'''</big> ([[ᎠᏂᏤᎩ ᎧᏬᏂᎯᏍᏗ|ᏤᎩ]]: '''''Česká republika'''''; [[ᎩᎵᏏ]]: '''''The Czech Republic''''') ᏙᏱᏗᏢ ᎦᏚᎲ [[ᏳᎳᏈ|ᏳᎳᏉᎢ]].
+
+== ᏗᏓᏟᎶᏍᏔᏅ ==
+<gallery>
+File:Prague_Montage.jpg|[[ᏆᎩ]]
+File:VeproKnedloZelo-00.jpg|[[ᎠᏂᏤᎩ ᎠᎵᏍᏓᏴᏗ]]
+</gallery>
+
+[[Category:ᏳᎳᏛ]]
 
 {{Link FA|eo}}
 {{Link FA|vi}}
