*Empty MediaWiki Message*

--- a/ᎠᏂᏍᏫᏗ.mw
+++ b/ᎠᏂᏍᏫᏗ.mw
@@ -44,7 +44,9 @@
 |-
 |}
 
-<big>'''ᎠᏂᏍᏫᏗ'''</big> ᎠᏂᏴᏩ [[ᏍᏫᏕᏂ]] ᎡᎯ. ᎠᏂᏍᏫᏗ [[ᎠᏂᏍᏫᏗ ᎧᏬᏂᎯᏍᏗ|ᏍᏫᏗ]] ᎠᏂᏬᏂᎭ.
+<big>'''ᎠᏂᏍᏫᏗ'''</big> ᎠᏂᏴᏫ [[ᏍᏫᏕᏂ]] ᎡᎯ. ᎠᏂᏍᏫᏗ [[ᎠᏂᏍᏫᏗ ᎧᏬᏂᎯᏍᏗ|ᏍᏫᏗ]] ᎠᏂᏬᏂᎭ.
+
+[[Category:ᎠᏂᏴᏫ]]
 
 [[ar:سويديون]]
 [[arz:سويديين]]
