*Empty MediaWiki Message*

--- a/ᎨᎵᏍᎩ.mw
+++ b/ᎨᎵᏍᎩ.mw
@@ -9,7 +9,7 @@ File:Homemade_meat_pie.jpg|[[Meat pie|ᎭᏫᏯ ᎨᎵᏍᎩ]]
 File:Pecan_pie_slice_(cropped).jpg|[[Pecan pie|ᏐᎯ ᎦᏅᎯᏓ ᎨᎵᏍᎩ]] 
 File:Pumpkin_Pie.jpg|[[Pumpkin pie|ᎢᏯ ᎨᎵᏍᎩ]] 
 File:SweetPotatoPie.jpg|[[Sweet potato pie|ᏄᎾ ᎦᏅᎯᏓ ᎨᎵᏍᎩ]] 
-
+File:Tiropita_Greek_dish.jpg|[[Tyropita|ᎪᎢ ᎤᏅᏗ ᎦᏚᏅ]] 
 </gallery>
 
 [[Category:ᎠᎵᏍᏓᏴᏗ]]
