*Empty MediaWiki Message*

--- a/ᎪᎢ_ᎤᏅᏗ_ᎦᏚᏅ_ᎨᎵᏍᎩ.mw
+++ b/ᎪᎢ_ᎤᏅᏗ_ᎦᏚᏅ_ᎨᎵᏍᎩ.mw
@@ -2,6 +2,7 @@
 
 <big>'''ᎪᎢ ᎤᏅᏗ ᎦᏚᏅ ᎨᎵᏍᎩ'''</big> ([[ᎠᏂᎪᎢ ᎧᏬᏂᎯᏍᏗ|ᎪᎢ]]: '''Τυρόπιτα''', ''Tyrópita'') [[ᎪᎢ]] ᎠᎵᏍᏓᏴᏗ.
 
+[[Category:ᎠᎵᏍᏓᏴᏗ]]
 
 [[ca:Tirópita]]
 [[el:Τυρόπιτα]]
