*Empty MediaWiki Message*

--- a/ᎤᏁᎫᎯᏍᏗ.mw
+++ b/ᎤᏁᎫᎯᏍᏗ.mw
@@ -1,6 +1,6 @@
 [[File:Mayonnaise_Jar_550x900.JPG|thumb|right|ᎤᏁᎫᎯᏍᏗ]]
 
-<big>'''ᎤᏁᎫᎯᏍᏗ'''</big> ([[ᎩᎵᏏ]]: '''Sandwich''') ᎤᏁᎦ ᎠᏑᏍᏗ.
+<big>'''ᎤᏁᎫᎯᏍᏗ'''</big> ([[ᎩᎵᏏ]]: '''Mayonnaise''') ᎤᏁᎦ ᎠᏑᏍᏗ.
 
 [[Category:ᎠᎵᏍᏓᏴᏗ]]
 
