*Empty MediaWiki Message*

--- a/ᎠᏍᏛᎭᏟ.mw
+++ b/ᎠᏍᏛᎭᏟ.mw
@@ -1,6 +1,6 @@
 [[File:Salami_sandwich.jpg|thumb|right|ᏎᎾᏫᏥ]]
 
-<big>'''ᏎᎾᏫᏥ'''</big> ([[ᎩᎵᏏ]]: '''Sandwich''') ᎠᎵᏍᏓᏴᏗ.
+<big>'''ᎠᏍᏛᎭᏟ'''</big> ᎠᎴ <big>'''ᏎᎾᏫᏥ'''</big> ([[ᎩᎵᏏ]]: '''Sandwich''') ᎠᎵᏍᏓᏴᏗ.
 
 == ᎠᎧᎵᎢᎲ ==
 * [[ᎦᏚ]]
