--- a/ᏫᏂᎦᏙᎯ.mw
+++ b/ᏫᏂᎦᏙᎯ.mw
@@ -1,5 +1,26 @@
-[[File:Flag of Finland.svg|thumb|right|250px|ᎦᏓᏘ]]
-'''ᏫᏂᎳᏂ''' ᏙᏱᏗᏢ ᎦᏚᎲ [[ᏳᎳᏈ|ᏳᎳᏉᎢ]].
+{{Infobox Country
+| Long name = Suomen tasavalta (ᏫᏂᏏ) <br> Republiken Finland (ᏍᏫᏗ)
+| Name = ᏫᏂᎳᏂ
+| ᎦᏓᏘ = Flag_of_Finland.svg
+| Coat of arms = Coat_of_arms_of_Finland.svg
+| Location = EU-Finland.svg
+| ᎠᏰᎵᎤ ᎤᏒᎧᎵ ᎦᏬᏂᏏᏍᏗ = [[ᎠᏂᏫᏂ ᎦᏬᏂᎯᏍᏗ|ᏫᏂᏏ]] <br> [[ᎠᏂᏍᏫᏗ ᎦᏬᏂᎯᏍᏗ|ᏍᏫᏗ]] <br> [[ᎠᏂᏌᎻ ᎦᏬᏂᎯᏍᏗ|ᏌᎻ]]
+| ᎠᏰᎵ ᏗᎦᎳᏫᎢᏍᏗ = [[Helsinki|ᎮᎵᏏᏂᎩ]]
+| ᎤᏔᏂᎢᏍᏗ ᎦᏚᎲᎢ = ᎮᎵᏏᏂᎩ
+| ᏚᎬᏫᏳᎯ ᏂᎰᏂ = [[Sauli Niinistö|ᏐᎵ ᏂᏂᏍᏛ]] <br> [[Jyrki Katainen|ᏴᎩ ᎧᏔᎢᏁᏂ]] <br> [[Eero Heinäluoma|ᎡᎶ ᎮᎢᎾᎷᎣᎹ]]
+| ᎠᏕᎳ = [[ᏳᎳᏈ ᎠᏕᎳ]]
+}}
+
+<big>'''ᏫᏂᎳᏂ'''</big> [[ᎠᏰᏟ ᎤᏙᏢᏒ]] [[ᏳᎳᏈ|ᏳᎳᏉᎢ]]. [[ᎠᏂᏫᏂ]] [[ᏫᏂᏏ]] ᎠᎴ [[ᏍᏫᏗ]] ᎠᏂᏬᏂᎭ.
+
+
+== ᏗᏓᏟᎶᏍᏔᏅ ==
+<gallery>
+File:HelsinkiMontage_NoEffects.jpg|[[ᎮᎵᏏᏂᎩ]]
+File:Leipäjuusto_cheese_with_cloudberry_jam.jpg|[[Leipäjuusto|ᏫᏂᏏ ᎤᏅᏗ ᎦᏚᏅ]]
+</gallery>
+
+[[Category:ᏳᎳᏈ]]
 
 [[ab:Суоми]]
 [[ace:Finlandia]]
