--- a/ᏍᏫᏕᏂ.mw
+++ b/ᏍᏫᏕᏂ.mw
@@ -11,7 +11,7 @@
 | ᎠᏕᎳ = ᏍᏫᏕᏂ ᎠᏕᎳ
 }}
 
-<big>'''ᏍᏫᏕᏂ'''</big> ᎠᎴ '''ᎤᎦᎾᏍᏔ''' ᏙᏱᏗᏢ ᎦᏚᎲ [[ᏳᎳᏈ|ᏳᎳᏉᎢ]]. '''ᎠᏂᏍᏫᏗ''' ᎦᏬᏂᎯᏍᏗ [[Sweden|ᏍᏫᏕᏂ]]. 10,000,000 ᎠᏂᏴᏫ ᎤᎦᎾᏍᏔ ᎦᏬᏂᎯᏍᏗ ᎠᏂᏬᏂᎭ.
+<big>'''ᏍᏫᏕᏂ'''</big> ᎠᎴ '''ᎤᎦᎾᏍᏔ''' ᎠᏰᏟ ᎤᏙᏢᏒ [[ᏳᎳᏈ|ᏳᎳᏉᎢ]]. [[ᎠᏂᏍᏫᏗ]] [[ᏍᏫᏗ]] ᎠᏂᏬᏂᎭ. 10,000,000 ᎠᏂᏴᏫ [[ᏍᏫᏗ]] ᎠᏂᏬᏂᎭ.
 
 [[File:Svenska spåkets utbredning.PNG|300px|right]]
 
