*Empty MediaWiki Message*

--- a/ᏙᎢᏥᏱ.mw
+++ b/ᏙᎢᏥᏱ.mw
@@ -11,7 +11,7 @@
 | ᎠᏕᎳ = [[ᏳᎳᏈ ᎠᏕᎳ]]
 }}
 
-<big>'''ᏙᎢᏥᏱ'''</big> ᏙᏱᏗᏢ ᎦᏚᎲ [[ᏳᎳᏈ|ᏳᎳᏉᎢ]].
+<big>'''ᏙᎢᏥᏱ'''</big> ᎠᏰᏟ ᎤᏙᏢᏒ [[ᏳᎳᏈ|ᏳᎳᏉᎢ]]. [[ᎠᏂᏙᎢᏥ]] [[ᏙᎢᏥ]] ᎠᏂᏬᏂᎭ.
 
 [[ab:Алмантәыла]]
 [[ace:Jeureuman]]
