--- a/ᏙᎢᏥᏱ.mw
+++ b/ᏙᎢᏥᏱ.mw
@@ -13,6 +13,8 @@
 
 <big>'''ᏙᎢᏥᏱ'''</big> ᎠᏰᏟ ᎤᏙᏢᏒ [[ᏳᎳᏈ|ᏳᎳᏉᎢ]]. [[ᎠᏂᏙᎢᏥ]] [[ᏙᎢᏥ]] ᎠᏂᏬᏂᎭ.
 
+[[Category:ᏳᎳᏈ]]
+
 [[ab:Алмантәыла]]
 [[ace:Jeureuman]]
 [[af:Duitsland]]
