*Empty MediaWiki Message*

--- a/ᎠᎵᏇᏂᏯ.mw
+++ b/ᎠᎵᏇᏂᏯ.mw
@@ -4,15 +4,16 @@
 | ᎦᏓᏘ = Flag_of_Albania.svg
 | Coat of arms = Albania_state_emblem.svg
 | Location = Europe-Albania.svg
-| ᎠᏰᎵᎤ ᎤᏒᎧᎵ ᎦᏬᏂᏏᏍᏗ = [[ᎠᎵᏇᏂᏯ ᎦᏬᏂᎯᏍᏗ|ᎠᎵᏇᏂᏯ]]
+| ᎠᏰᎵᎤ ᎤᏒᎧᎵ ᎦᏬᏂᏏᏍᏗ = [[ᎠᎵᏇᏂᏯ ᎦᏬᏂᎯᏍᏗ|ᎠᎵᏇᏂ]]
 | ᎠᏰᎵ ᏗᎦᎳᏫᎢᏍᏗ = [[Tirana|ᏘᎳᎾ]]
 | ᎤᏔᏂᎢᏍᏗ ᎦᏚᎲᎢ = ᏘᎳᎾ
 | ᏚᎬᏫᏳᎯ ᏂᎰᏂ = [[Bamir Topi|ᏆᎻᎠ ᏙᏈ]] <br> [[Sali Berisha|ᏌᎵ ᏇᎵᏌ]]
 | ᎠᏕᎳ = ᎠᎵᏇᏂᏯ ᎠᏕᎳ
 }}
 
-<big>'''ᎠᎵᏇᏂᏯ'''</big> ᏙᏱᏗᏢ ᎦᏚᎲ [[ᏳᎳᏈ|ᏳᎳᏉᎢ]].
+<big>'''ᎠᎵᏇᏂᏯ'''</big> ᎠᏰᏟ ᎤᏙᏢᏒ [[ᏳᎳᏈ|ᏳᎳᏉᎢ]]. [[ᎠᏂᎠᎵᏇᏂ]] [[ᎠᎵᏇᏂ]] ᎠᏂᏬᏂᎭ.
 
+[[Category:ᏳᎳᏈ]]
 
 [[ab:Арнауыҭтәыла]]
 [[ace:Albania]]
