*Empty MediaWiki Message*

--- a/ᎠᏂᏙᎳ.mw
+++ b/ᎠᏂᏙᎳ.mw
@@ -7,14 +7,16 @@
 | Area = 99646
 | Population = 107,000,000
 | Population year = 
-| ᎠᏰᎵᎤ ᎤᏒᎧᎵ ᎦᏬᏂᏏᏍᏗ = [[ᎧᏔᎳ]] 
+| ᎠᏰᎵᎤ ᎤᏒᎧᎵ ᎦᏬᏂᏏᏍᏗ = [[ᎧᏔᎳᏂ]] 
 | ᎠᏰᎵ ᏗᎦᎳᏫᎢᏍᏗ = [[ᎠᏅᏙᎳ-Ꮃ-ᏪᎳ]]
 | ᎤᏔᏂᎢᏍᏗ ᎦᏚᎲᎢ = ᎠᏅᏙᎳ-Ꮃ-ᏪᎳ
 | ᏚᎬᏫᏳᎯ ᏂᎰᏂ = [[Giorgio Napolitano|ᏣᏥᎣ ᎾᏉᎵᏔᏃ]]
 | ᎠᏕᎳ = [[ᏳᎳᏈ ᎠᏕᎳ]]
 }}
 
-'''ᎠᏂᏙᎳ''' ᏙᏱᏗᏢ ᎦᏚᎲ [[ᏳᎳᏈ|ᏳᎳᏉᎢ]].
+'''ᎠᏂᏙᎳ''' ᎠᏰᏟ ᎤᏙᏢᏒ [[ᏳᎳᏈ|ᏳᎳᏉᎢ]]. [[ᎠᏂᎠᏂᏙᎳ]] [[ᎧᏔᎳᏂ]] ᎠᏂᏬᏂᎭ.
+
+[[Category:ᏳᎳᏈ]]
 
 [[ace:Andorra]]
 [[af:Andorra]]
