*Empty MediaWiki Message*

--- a/ᎠᎺᏂᏱ.mw
+++ b/ᎠᎺᏂᏱ.mw
@@ -4,14 +4,16 @@
 | ᎦᏓᏘ = Flag_of_Armenia.svg
 | Coat of arms = Coat_of_arms_of_Armenia.svg
 | Location = Armenia_(orthographic_projection).svg
-| ᎠᏰᎵᎤ ᎤᏒᎧᎵ ᎦᏬᏂᏏᏍᏗ = [[ᎠᎺᏂ ᎦᏬᏂᎯᏍᏗ]] 
+| ᎠᏰᎵᎤ ᎤᏒᎧᎵ ᎦᏬᏂᏏᏍᏗ = [[ᎠᏂᎠᎺᏂ ᎦᏬᏂᎯᏍᏗ|ᎠᎺᏂ]] 
 | ᎠᏰᎵ ᏗᎦᎳᏫᎢᏍᏗ = [[ᏰᎴᏩᏂ]]
 | ᎤᏔᏂᎢᏍᏗ ᎦᏚᎲᎢ = ᏰᎴᏩᏂ
 | ᏚᎬᏫᏳᎯ ᏂᎰᏂ = [[Serzh Sargsyan|ᏒᏥ ᏌᎩᏍᏯᏂ]] <br> [[Tigran Sargsyan|ᏘᏆᏂ ᏌᎩᏍᏯᏂ]] <br> [[Samvel Nikoyan|ᏌᎽᎡᎵ ᏂᎪᏯᏂ]]
 | ᎠᏕᎳ = [[ᎠᎺᏂ ᎠᏕᎳ]]
 }}
 
-'''ᎠᎺᏂᏱ''' ᏙᏱᏗᏢ ᎦᏚᎲ [[ᏳᎳᏈ|ᏳᎳᏉᎢ]].
+'''ᎠᎺᏂᏱ''' ᎠᏰᏟ ᎤᏙᏢᏒ [[ᏳᎳᏈ|ᏳᎳᏉᎢ]]. [[ᎠᏂᎠᎺᏂ]] [[ᎠᎺᏂ]] ᎠᏂᏬᏂᎭ.
+
+[[Category:ᏳᎳᏈ]]
 
 [[vep:Armenii]]
 
