*Empty MediaWiki Message*

--- a/ᎠᏍᏟᏯ.mw
+++ b/ᎠᏍᏟᏯ.mw
@@ -11,7 +11,9 @@
 | ᎠᏕᎳ = [[ᏳᎳᏈ ᎠᏕᎳ]]
 }}
 
-'''ᎣᏍᏟᏯ''' ᏙᏱᏗᏢ ᎦᏚᎲ [[ᏳᎳᏈ|ᏳᎳᏉᎢ]].
+'''ᎣᏍᏟᏯ''' ᎠᏰᏟ ᎤᏙᏢᏒ [[ᏳᎳᏈ|ᏳᎳᏉᎢ]]. [[ᎠᏂᎣᏍᏟᏯ]] [[ᏙᎢᏥ]] ᎠᏂᏬᏂᎭ.
+
+[[Category:ᏳᎳᏈ]]
 
 [[ace:Austria]]
 [[af:Oostenryk]]
