*Empty MediaWiki Message*

--- a/ᎠᏎᏆᏣᏂ.mw
+++ b/ᎠᏎᏆᏣᏂ.mw
@@ -4,14 +4,16 @@
 | ᎦᏓᏘ = Flag_of_Azerbaijan.svg
 | Coat of arms = Coat_of_arms_of_Azerbaijan.svg
 | Location = Azerbaijan_(orthographic_projection).svg
-| ᎠᏰᎵᎤ ᎤᏒᎧᎵ ᎦᏬᏂᏏᏍᏗ = [[ᎠᏌᏆᎢᏣᏂ ᎦᏬᏂᎯᏍᏗ]] 
+| ᎠᏰᎵᎤ ᎤᏒᎧᎵ ᎦᏬᏂᏏᏍᏗ = [[ᎠᏎᏆᏣᏂ ᎦᏬᏂᎯᏍᏗ|ᎠᏎᏆᏣᏂ]] 
 | ᎠᏰᎵ ᏗᎦᎳᏫᎢᏍᏗ = [[Baku|ᏆᎫ]]
 | ᎤᏔᏂᎢᏍᏗ ᎦᏚᎲᎢ = ᏆᎫ
 | ᏚᎬᏫᏳᎯ ᏂᎰᏂ = [[Ilham Aliyev|ᎢᎵᎭᎻ ᎠᎵᏰᏫ]] <br> [[Artur Rasizade|ᎠᏘ ᎳᏏᏌᏕ]]
 | ᎠᏕᎳ = [[ᎠᏌᏆᎢᏣᏂ ᎠᏕᎳ]]
 }}
 
-'''ᎠᏎᏆᏣᏂ''' ᏙᏱᏗᏢ ᎦᏚᎲ [[ᏳᎳᏈ|ᏳᎳᏉᎢ]].
+'''ᎠᏎᏆᏣᏂ''' ᎠᏰᏟ ᎤᏙᏢᏒ [[ᏳᎳᏈ|ᏳᎳᏉᎢ]]. [[ᎠᏂᎠᏎᏆᏣᏂ]] [[ᎠᏎᏆᏣᏂ]] ᎠᏂᏬᏂᎭ.
+
+[[Category:ᏳᎳᏈ]]
 
 [[ab:Азербаиџьан]]
 [[ace:Azèrbaijan]]
