*Empty MediaWiki Message*

--- a/ᎡᏍᏙᏂᏯ.mw
+++ b/ᎡᏍᏙᏂᏯ.mw
@@ -4,14 +4,16 @@
 | ᎦᏓᏘ = Flag_of_Estonia.svg
 | Coat of arms = Coat_of_arms_of_Estonia.svg
 | Location = EU-Estonia.svg
-| ᎠᏰᎵᎤ ᎤᏒᎧᎵ ᎦᏬᏂᏏᏍᏗ = [[ᎡᏍᏙᏂ ᎦᏬᏂᎯᏍᏗ|ᎡᏍᏙᏂ]]
+| ᎠᏰᎵᎤ ᎤᏒᎧᎵ ᎦᏬᏂᏏᏍᏗ = [[ᎠᏂᎡᏍᏙᏂ ᎦᏬᏂᎯᏍᏗ|ᎡᏍᏙᏂ]]
 | ᎠᏰᎵ ᏗᎦᎳᏫᎢᏍᏗ = [[Tallinn|ᏔᎵᏂ]]
 | ᎤᏔᏂᎢᏍᏗ ᎦᏚᎲᎢ = ᏔᎵᏂ
 | ᏚᎬᏫᏳᎯ ᏂᎰᏂ = [[Toomas Hendrik Ilves|ᏙᎹᏏ ᎮᏁᏫᎩ ᎢᎵᏪᏏ]] <br> [[Andrus Ansip|ᎡᏂᏚ ᎠᏂᏏᏈ]] <br> [[Ene Ergma|ᎡᏁ ᎡᎩᎹ]]
 | ᎠᏕᎳ = [[ᏳᎳᏈ ᎠᏕᎳ]]
 }}
 
-<big>'''ᎡᏍᏙᏂᏱ'''</big> ᏙᏱᏗᏢ ᎦᏚᎲ [[ᏳᎳᏈ|ᏳᎳᏉᎢ]].
+<big>'''ᎡᏍᏙᏂᏱ'''</big> ᎠᏰᏟ ᎤᏙᏢᏒ [[ᏳᎳᏈ|ᏳᎳᏉᎢ]]. [[ᎠᏂᎡᏍᏙᏂ]] [[ᎡᏍᏙᏂ]] ᎠᏂᏬᏂᎭ.
+
+[[Category:ᏳᎳᏈ]]
 
 [[ace:Èstonia]]
 [[af:Estland]]
