*Empty MediaWiki Message*

--- a/ᏇᎳᎷᏍ.mw
+++ b/ᏇᎳᎷᏍ.mw
@@ -4,18 +4,18 @@
 | ᎦᏓᏘ = Flag of Belarus.svg
 | Coat of arms = Coat of arms of Belarus.svg
 | Location = LocationBelarus.png
-| ᎠᏰᎵᎤ ᎤᏒᎧᎵ ᎦᏬᏂᏏᏍᏗ = ᏇᎳᎷᏏᎥ
+| ᎠᏰᎵᎤ ᎤᏒᎧᎵ ᎦᏬᏂᏏᏍᏗ = [[ᎠᏂᏇᎳᎷᏏ|ᏇᎳᎷᏏ]]
 | ᎠᏰᎵ ᏗᎦᎳᏫᎢᏍᏗ = [[Мінск]]
 | ᎤᏔᏂᎢᏍᏗ ᎦᏚᎲᎢ = Мінск
 | ᏚᎬᏫᏳᎯ ᏂᎰᏂ = Аляксандр Лукашэнка
 | ᎠᏕᎳ = Беларускі рубель
 }}
-'''ᏇᎳᎷᏏ''' ᏙᏱᏗᏢ ᎦᏚᎲ ᎧᎸᎬᎢᏗtᎥ [[ᏳᎳᏈ|ᏳᎳᏉᎢ]].
 
- 
+'''ᏇᎳᎷᏏ''' ᎠᏰᏟ ᎤᏙᏢᏒ [[ᏳᎳᏈ|ᏳᎳᏉᎢ]]. [[ᎠᏂᏇᎳᎷᏏ]] [[ᏇᎳᎷᏏ]] ᎠᏂᏬᏂᎭ.
+
 {{Stub}}
 
-[[Category:ᏳᎳᏛ]]
+[[Category:ᏳᎳᏈ]]
 [[Category:ᎠᏰᎵ ᏚᎾᏙᏢᏩᏗᏒ]]
 
 [[ace:Bèlarusia]]
