*Empty MediaWiki Message*

--- a/ᏇᎳᎷᏍ.mw
+++ b/ᏇᎳᎷᏍ.mw
@@ -11,7 +11,7 @@
 | ᎠᏕᎳ = Беларускі рубель
 }}
 
-'''ᏇᎳᎷᏏ''' ᎠᏰᏟ ᎤᏙᏢᏒ [[ᏳᎳᏈ|ᏳᎳᏉᎢ]]. [[ᎠᏂᏇᎳᎷᏏ]] [[ᏇᎳᎷᏏ]] ᎠᏂᏬᏂᎭ.
+'''ᏇᎳᎷᏏ''' ᎠᏰᏟ ᎤᏙᏢᏒ [[ᏳᎳᏈ|ᏳᎳᏉᎢ]]. [[ᎠᏂᏇᎳᎷᏏ]] [[ᎠᏂᏇᎳᎷᏏ ᎦᏬᏂᎯᏍᏗ|ᏇᎳᎷᏏ]] ᎠᏂᏬᏂᎭ.
 
 {{Stub}}
 
