*Empty MediaWiki Message*

--- a/ᏇᎵᏥᎥᎻ.mw
+++ b/ᏇᎵᏥᎥᎻ.mw
@@ -4,14 +4,16 @@
 | ᎦᏓᏘ = Flag_of_Belgium.svg
 | Coat of arms = Greater_Coat_of_Arms_of_Belgium.svg
 | Location = EU-Belgium.svg
-| ᎠᏰᎵᎤ ᎤᏒᎧᎵ ᎦᏬᏂᏏᏍᏗ = [[ᏓᏥ ᎧᏬᏂᎯᏍᏗ|ᏓᏥ]] <br> [[ᎦᎸᏥ ᎧᏬᏂᎯᏍᏗ|ᎦᎸᏥ]] <br> [[ᏛᏥ ᎧᏬᏂᎯᏍᏗ|ᏛᏥ]]
-| ᎠᏰᎵ ᏗᎦᎳᏫᎢᏍᏗ = [[Brussels|ᏆᏎᎵ]]
-| ᎤᏔᏂᎢᏍᏗ ᎦᏚᎲᎢ = ᏆᏎᎵ
+| ᎠᏰᎵᎤ ᎤᏒᎧᎵ ᎦᏬᏂᏏᏍᏗ = [[ᎠᏂᏛᏥ ᎦᏬᏂᎯᏍᏗ|ᏛᏥ]] <br> [[ᎠᏂᎦᎸᏥ ᎦᏬᏂᎯᏍᏗ|ᎦᎸᏥ]] <br> [[ᎠᏂᏙᎢᏥ ᎦᏬᏂᎯᏍᏗ|ᏙᎢᏥ]]
+| ᎠᏰᎵ ᏗᎦᎳᏫᎢᏍᏗ = [[Brussels|ᏋᏎᎵ]]
+| ᎤᏔᏂᎢᏍᏗ ᎦᏚᎲᎢ = ᏋᏎᎵ
 | ᏚᎬᏫᏳᎯ ᏂᎰᏂ = [[Albert II|ᎠᎵᏆᏘ II]] <br> [[Elio Di Rupo|ᎢᎵᏲ Ꮧ ᎷᏉ]]
 | ᎠᏕᎳ = [[ᏳᎳᏈ ᎠᏕᎳ]]
 }}
 
-<big>'''ᏇᎵᏨᎻ'''</big> ᏙᏱᏗᏢ ᎦᏚᎲ [[ᏳᎳᏈ|ᏳᎳᏉᎢ]].
+<big>'''ᏇᎵᏨᎻ'''</big> ᎠᏰᏟ ᎤᏙᏢᏒ [[ᏳᎳᏈ|ᏳᎳᏉᎢ]]. [[ᎠᏂᏇᎵᏨᎻ]] [[ᏛᏥ ᎦᏬᏂᎯᏍᏗ|ᏛᏥ]] ᎠᎴ [[ᎦᎸᏥ ᎦᏬᏂᎯᏍᏗ|ᎦᎸᏥ]] ᎠᎴ [[ᏙᎢᏥ]] ᎠᏂᏬᏂᎭ.
+
+[[Category:ᏳᎳᏈ]]
 
 [[ace:Bèlgia]]
 [[af:België]]
