*Empty MediaWiki Message*

--- a/ᏆᏍᏂᏯ_ᎠᎴ_ᎲᏤᎪᏫᎾ.mw
+++ b/ᏆᏍᏂᏯ_ᎠᎴ_ᎲᏤᎪᏫᎾ.mw
@@ -1,10 +1,11 @@
-[[File:Location Bosnia-Herzegovina Europe.png|thumb|right|ᏉᏍᏂᏯ]]'''ᏉᏍᏂᏯ''' ᏙᏱᏗᏢ ᎦᏚᎲ ᎧᎸᎬᎢᏗᏢ [[ᎡᎶᏆ]]. ᎠᎦᏴᎵ [[ᏳᎪᏍᎳᏈ]].
+[[File:Location Bosnia-Herzegovina Europe.png|thumb|right|ᏉᏍᏂᏯ]]
+'''ᏆᏍᏂᏯ''' ᎠᎴ '''ᎲᏤᎪᏫᎾ''' ᎠᏰᏟ ᎤᏙᏢᏒ [[ᏳᎳᏈ|ᏳᎳᏉᎢ]]. ᎠᎦᏴᎵ [[ᏳᎪᏍᎳᏈ]].
 
 == ᏙᏯᏗᏢ ᏗᏕᎬᏔᏛ ==
 * [http://bosnianews.blogspot.com/ Bosnia News]
 {{stub}}
 
-[[Category:ᏳᎳᏛ]]
+[[Category:ᏳᎳᏈ]]
 [[Category:ᎠᏰᎵ ᏚᎾᏙᏢᏩᏗᏒ]]
 
 [[ace:Bosnia Hèrzègovina]]
