--- a/ᏤᎩ_ᏍᎦᏚᎩ.mw
+++ b/ᏤᎩ_ᏍᎦᏚᎩ.mw
@@ -4,14 +4,14 @@
 | ᎦᏓᏘ = Flag of the Czech Republic.svg
 | Coat of arms = Coat_of_arms_of_the_Czech_Republic.svg
 | Location = EU-Czechia.svg
-| ᎠᏰᎵᎤ ᎤᏒᎧᎵ ᎦᏬᏂᏏᏍᏗ = [[ᎠᏂᏤᎩ ᎧᏬᏂᎯᏍᏗ|ᏤᎩ]]
+| ᎠᏰᎵᎤ ᎤᏒᎧᎵ ᎦᏬᏂᏏᏍᏗ = [[ᎠᏂᏤᎩ ᎦᏬᏂᎯᏍᏗ|ᏤᎩ]]
 | ᎠᏰᎵ ᏗᎦᎳᏫᎢᏍᏗ = [[Prague|ᏆᎩ]]
 | ᎤᏔᏂᎢᏍᏗ ᎦᏚᎲᎢ = ᏆᎩ
 | ᏚᎬᏫᏳᎯ ᏂᎰᏂ = [[Václav Klaus|ᏩᏥᎳᏫ ᏝᎤᏏ]] <br> [[Petr Nečas|ᏈᏓ ᏁᏣᏏ]]
 | ᎠᏕᎳ = [[ᏤᎩᏱ ᎠᏕᎳ]]
 }}
 
-<big>'''ᏤᎩᏱ'''</big> ([[ᎠᏂᏤᎩ ᎧᏬᏂᎯᏍᏗ|ᏤᎩ]]: '''''Česká republika'''''; [[ᎩᎵᏏ]]: '''''The Czech Republic''''') ᏙᏱᏗᏢ ᎦᏚᎲ [[ᏳᎳᏈ|ᏳᎳᏉᎢ]].
+<big>'''ᏤᎩᏱ'''</big> ([[ᎠᏂᏤᎩ ᎦᏬᏂᎯᏍᏗ|ᏤᎩ]]: '''''Česká republika'''''; [[ᎩᎵᏏ]]: '''''The Czech Republic''''') ᎠᏰᏟ ᎤᏙᏢᏒ [[ᏳᎳᏈ|ᏳᎳᏉᎢ]]. [[ᎠᏂᏤᎩ]] [[ᎠᏂᏤᎩ ᎦᏬᏂᎯᏍᏗ|ᏤᎩ]] ᎠᏂᏬᏂᎭ.
 
 == ᏗᏓᏟᎶᏍᏔᏅ ==
 <gallery>
