--- a/ᎩᎵᏏᏲ.mw
+++ b/ᎩᎵᏏᏲ.mw
@@ -52,7 +52,7 @@
 == ᏙᏯᏗᏢ ᏗᏕᎬᏔᏛ ==
 {{Commons|United Kingdom}}
 
-[[Category:ᏳᎳᏛ]]
+[[Category:ᏳᎳᏈ]]
 [[Category:ᎠᏰᎵ ᏚᎾᏙᏢᏩᏗᏒ]]
 
 [[vep:Sur' Britanii]]
