*Empty MediaWiki Message*

--- a/ᎪᎢᎯ.mw
+++ b/ᎪᎢᎯ.mw
@@ -11,7 +11,9 @@
 | ᎠᏕᎳ = [[ᏳᎳᏈ ᎠᏕᎳ]]
 }}
 
-<big>'''ᎪᎢ'''</big> ᏙᏱᏗᏢ ᎦᏚᎲ [[ᏳᎳᏈ|ᏳᎳᏉᎢ]].
+<big>'''ᎪᎢ'''</big> ᎠᏰᏟ ᎤᏙᏢᏒ [[ᏳᎳᏈ|ᏳᎳᏉᎢ]]. [[ᎠᏂᎪᎢ]] [[ᎪᎢ]] ᎠᏂᏬᏂᎭ.
+
+[[Category:ᏳᎳᏈ]]
 
 [[ab:Барзентәыла]]
 [[ace:Yunani]]
