*Empty MediaWiki Message*

--- a/ᏧᏁᏍᏓᎸᎯ.mw
+++ b/ᏧᏁᏍᏓᎸᎯ.mw
@@ -4,14 +4,14 @@
 | ᎦᏓᏘ = Flag of Iceland.svg
 | Coat of arms = Coat_of_arms_of_Iceland.svg
 | Location = Europe-Iceland.svg
-| ᎠᏰᎵᎤ ᎤᏒᎧᎵ ᎦᏬᏂᏏᏍᏗ = [[ᎠᏂᎤᏁᏍᏓᎳ ᎧᏬᏂᎯᏍᏗ|ᎤᏁᏍᏓᎵ]]
+| ᎠᏰᎵᎤ ᎤᏒᎧᎵ ᎦᏬᏂᏏᏍᏗ = [[ᎠᏂᎤᏁᏍᏓᎳ ᎦᏬᏂᎯᏍᏗ|ᎤᏁᏍᏓᎵ]]
 | ᎠᏰᎵ ᏗᎦᎳᏫᎢᏍᏗ = [[Reykjavik|ᎴᎩᏯᏫᎩ]]
 | ᎤᏔᏂᎢᏍᏗ ᎦᏚᎲᎢ = ᎴᎩᏯᏫᎩ
 | ᏚᎬᏫᏳᎯ ᏂᎰᏂ = [[Ólafur Ragnar Grímsson|ᎣᎳᏩ ᎳᎩᎾ ᏈᎻᏌᏂ]] <br> [[Jóhanna Sigurðardóttir|ᏲᎭᎾ ᏏᎬᏓᏙᏔ]] <br> [[Ásta Ragnheiður Jóhannesdóttir|ᎠᏍᏔ ᎳᎨᏂᎮᏛ ᏲᎭᏁᏍᏙᏔ]]
 | ᎠᏕᎳ = [[ᎠᏂᎤᏁᏍᏓᎳ ᎠᏕᎳ]]
 }}
 
-<big>'''ᎤᏁᏍᏓᎶᎢ'''</big> ([[ᎠᏂᎤᏁᏍᏓᎳ ᎧᏬᏂᎯᏍᏗ|ᎤᏁᏍᏓᎵ]]: '''''Ísland'''''; [[ᎩᎵᏏ]]: '''''Iceland''''') ᏙᏱᏗᏢ ᎦᏚᎲ [[ᏳᎳᏈ|ᏳᎳᏉᎢ]].
+<big>'''ᎤᏁᏍᏓᎶᎢ'''</big> ([[ᎠᏂᎤᏁᏍᏓᎳ ᎧᏬᏂᎯᏍᏗ|ᎤᏁᏍᏓᎵ]]: '''''Ísland'''''; [[ᎩᎵᏏ]]: '''''Iceland''''') ᎠᏰᏟ ᎤᏙᏢᏒ [[ᏳᎳᏈ|ᏳᎳᏉᎢ]]. [[ᎠᏂᎤᏁᏍᏓᎳ]] [[ᎠᏂᎤᏁᏍᏓᎳ ᎦᏬᏂᎯᏍᏗ|ᎤᏁᏍᏓᎵ]] ᎠᏂᏬᏂᎭ.
 
 == ᏗᏓᏟᎶᏍᏔᏅ ==
 <gallery>
@@ -20,7 +20,7 @@ File:Iceland_Krona_Coins.jpg|[[ᏲᏂᏱ ᎠᏕᎳ]]
 File:Thorramatur.jpg|[[ᎠᏂᎤᏁᏍᏓᎳ ᎠᎵᏍᏓᏴᏗ]]
 </gallery>
 
-[[Category:ᏳᎳᏛ]]
+[[Category:ᏳᎳᏈ]]
 [[Category:ᎠᏰᎵ ᏚᎾᏙᏢᏩᏗᏒ]]
 
 [[ace:Islandia]]
