*Empty MediaWiki Message*

--- a/ᎧᏎᎧᏍᏕᏂ.mw
+++ b/ᎧᏎᎧᏍᏕᏂ.mw
@@ -12,7 +12,7 @@
 | ᎠᏕᎳ = [[ᎧᏌᎩ ᎠᏕᎳ]]
 }}
 
-<big>'''ᎧᏌᎩᏍᏔᏂ'''</big> ᏙᏱᏗᏢ ᎦᏚᎲ [[ᎡᏏᏱ|ᎡᏏᏲᎢ]].
+<big>'''ᎧᏌᎩᏍᏔᏂ'''</big> ᎠᏰᏟ ᎤᏙᏢᏒ [[ᎡᏏᏱ|ᎡᏏᏲᎢ]]. [[ᎠᏂᎧᏌᎩ]] [[ᎧᏌᎩ]] ᎠᏂᏬᏂᎭ.
 
 == ᏗᏓᏟᎶᏍᏔᏅ ==
 <gallery>
@@ -20,6 +20,9 @@ File:Kazakhyurt.jpg|[[ᎧᏌᎩ ᎦᎵᏦᏕ]] <br> Киіз үй ''(Юрта)''
 File:200_tenge_front_small.jpg|[[ᎧᏌᎩ ᎠᏕᎳ]] <br> Қазақстан теңгесі ''(Казахстанский тенге)''
 File:Horsemeat_platter.jpg|'''[[ᎧᏌᎩ ᎠᎵᏍᏓᏴᏗ]]''' <br> [[ᏐᏈᎵ ᎭᏫᏯ]]
 </gallery>
+
+[[Category:ᎡᏏᏱ]]
+[[Category:ᏳᎳᏈ]]
 
 [[ace:Kazakhstan]]
 [[kbd:Къазахъстэн]]
