*Empty MediaWiki Message*

--- a/ᎹᎵᏙᏫᎠ.mw
+++ b/ᎹᎵᏙᏫᎠ.mw
@@ -1,10 +1,10 @@
 [[File:Location Moldova Europe.png|thumb|right|ᎼᎸᏙᏩ]]
 
-<big>'''ᎼᎵᏙᏩ'''</big> ᏙᏱᏗᏢ ᎦᏚᎲ ᎧᎸᎬᎢᏗᏢ [[ᏳᎳᏈ|ᏳᎳᏉᎢ]].
+<big>'''ᎼᎵᏙᏩ'''</big> ᎠᏰᏟ ᎤᏙᏢᏒ [[ᏳᎳᏈ|ᏳᎳᏉᎢ]]. [[ᎠᏂᎹᎵᏙᏩ]] [[ᎠᏂᎼᎵᏙᏩ ᎶᎺᏂ]] ᎠᏂᏬᏂᎭ.
 
 {{stub}}
 
-[[Category:ᏳᎳᏛ]]
+[[Category:ᏳᎳᏈ]]
 [[Category:ᎠᏰᎵ ᏚᎾᏙᏢᏩᏗᏒ]]
 
 [[ab:Молдова]]
