*Empty MediaWiki Message*

--- a/ᎾᏍᎩ_ᏁᏛᎳᏂ.mw
+++ b/ᎾᏍᎩ_ᏁᏛᎳᏂ.mw
@@ -11,7 +11,9 @@
 | ᎠᏕᎳ = [[ᏳᎳᏈ ᎠᏕᎳ]]
 }}
 
-<big>'''ᏛᏥᏱ'''</big> ᏙᏱᏗᏢ ᎦᏚᎲ [[ᏳᎳᏈ|ᏳᎳᏉᎢ]].
+<big>'''ᏛᏥᏱ'''</big> ᎠᏰᏟ ᎤᏙᏢᏒ [[ᏳᎳᏈ|ᏳᎳᏉᎢ]]. [[ᎠᏂᏛᏥ]] [[ᏛᏥ]] ᎠᏂᏬᏂᎭ.
+
+[[Category:ᏳᎳᏈ]]
 
 [[ace:Beulanda]]
 [[af:Nederland]]
