--- a/ᏉᏥᎦᎳ.mw
+++ b/ᏉᏥᎦᎳ.mw
@@ -11,7 +11,9 @@
 | ᎠᏕᎳ = [[ᏳᎳᏈ ᎠᏕᎳ]]
 }}
 
-<big>'''ᏉᏧᎦᎵ'''</big> ᏙᏱᏗᏢ ᎦᏚᎲ [[ᏳᎳᏈ|ᏳᎳᏉᎢ]].
+<big>'''ᏉᏧᎦᎵ'''</big> ᎠᏰᏟ ᎤᏙᏢᏒ [[ᏳᎳᏈ|ᏳᎳᏉᎢ]]. [[ᎠᏂᏉᏧᎦᎵ]] [[ᏉᏧᎦᎵ]] ᎠᏂᏬᏂᎭ.
+
+[[Category:ᏳᎳᏈ]]
 
 [[ace:Portugéh]]
 [[kbd:Португал]]
