*Empty MediaWiki Message*

--- a/ᎶᎹᏂᏯ.mw
+++ b/ᎶᎹᏂᏯ.mw
@@ -1,8 +1,8 @@
-[[File:Location Romania EU Europe.PNG|thumb|right|ᎶᎹᏂᏯ]]'''ᎶᎹᏂᏯ''' ᏙᏱᏗᏢ ᎦᏚᎲ ᎧᎸᎬᎢᏗᏢ [[ᎡᎶᏆ]].
+[[File:Location Romania EU Europe.PNG|thumb|right|ᎶᎹᏂᏯ]]'''ᎶᎺᏂᏱ''' ᎠᏰᏟ ᎤᏙᏢᏒ [[ᏳᎳᏈ|ᏳᎳᏉᎢ]]. [[ᎠᏂᎶᎺᏂ]] [[ᎶᎺᏂ]] ᎠᏂᏬᏂᎭ.
 
 {{stub}}
 
-[[Category:ᏳᎳᏛ]]
+[[Category:ᏳᎳᏈ]]
 [[Category:ᎠᏰᎵ ᏚᎾᏙᏢᏩᏗᏒ]]
 [[Category:Questionably transliterated titles]]
 
