*Empty MediaWiki Message*

--- a/ᎬᏃ.mw
+++ b/ᎬᏃ.mw
@@ -12,7 +12,7 @@
 | ᎠᏕᎳ = [[ᎬᏂᏱ ᎠᏕᎳ]]
 }}
 
-<big>'''ᎬᏂᏱ'''</big> ᏙᏱᏗᏢ ᎦᏚᎲ [[ᎡᏏᏱ|ᎡᏏᏲᎢ]].
+<big>'''ᎬᏂᏱ'''</big> ᎠᏰᏟ ᎤᏙᏢᏒ [[ᎡᏏᏱ|ᎡᏏᏲᎢ]]. [[ᎠᏂᎬᎾ]] [[ᎠᏂᎬᎾ ᎦᏬᏂᎯᏍᏗ|ᎬᏂ]] ᎠᏂᏬᏂᎭ.
 
 == ᏗᏓᏟᎶᏍᏔᏅ ==
 <gallery>
@@ -20,6 +20,8 @@ File:Crowne_Plaza_İzmir.jpg|[[ᎢᏍᎻᎠ]] <br> <small>İzmir</small>
 File:Turkish_Lira.PNG|[[ᎬᏂᏱ ᎠᏕᎳ]] <br> <small>Türk lirası</small>
 File:Turkish_Meze_Plate.jpg|[[ᎬᏂᏱ ᎠᎵᏍᏓᏴᏗ]]
 </gallery>
+
+[[Category:ᏳᎳᏈ]]
 
 [[ace:Tureuki]]
 [[kbd:Тырку]]
