*Empty MediaWiki Message*

--- a/ᏒᏈᏯ.mw
+++ b/ᏒᏈᏯ.mw
@@ -1,9 +1,9 @@
 [[File:Location Serbia Europe.png|thumb|right|ᏒᏈᏯ]]
-ᏙᏱᏗᏢ ᎦᏚᎲ ᎧᎸᎬᎢ [[ᏳᎳᏈ]]. ᎠᎦᏴᎵ [[ᏳᎪᏍᎳᏈ]].
+<big>'''ᏒᏈᏯ'''</big> ᎠᏰᏟ ᎤᏙᏢᏒ [[ᏳᎳᏈ|ᏳᎳᏉᎢ]]. [[ᎠᏂᏒᏈ]] [[ᏒᏈ]] ᎠᏂᏬᏂᎭ.
 
 {{stub}}
 
-[[Category:ᏳᎳᏛ]]
+[[Category:ᏳᎳᏈ]]
 [[Category:ᎠᏰᎵ ᏚᎾᏙᏢᏩᏗᏒ]]
 
 [[ace:Sèrbia]]
