*Empty MediaWiki Message*

--- a/ᏍᏫᏍ.mw
+++ b/ᏍᏫᏍ.mw
@@ -11,7 +11,9 @@
 | ᎠᏕᎳ = [[ᏍᏫᏏ ᎠᏕᎳ]]
 }}
 
-'''ᏍᏫᏣᎳᏂ''' ᏙᏱᏗᏢ ᎦᏚᎲ [[ᏳᎳᏈ|ᏳᎳᏉᎢ]].
+'''ᏍᏫᏣᎳᏂ''' ᎠᏰᏟ ᎤᏙᏢᏒ [[ᏳᎳᏈ|ᏳᎳᏉᎢ]]. [[ᎠᏂᏍᏫᏏ]] [[ᏙᎢᏥ]] ᎠᎴ [[ᎦᎸᏥ]] ᎠᎴ [[ᎢᏓᎵ]] ᎠᎴ [[ᎶᎹᏂᏥ]] ᎠᏂᏬᏂᎭ.
+
+[[Category:ᏳᎳᏈ]]
 
 [[ace:Swiss]]
 [[af:Switserland]]
