*Empty MediaWiki Message*

--- a/ᏳᎧᎴᏂ.mw
+++ b/ᏳᎧᎴᏂ.mw
@@ -11,7 +11,7 @@
 | ᎠᏕᎳ = ᏳᎧᏪᏂ ᎠᏕᎳ
 }}
 
-<big>'''ᏳᎧᏪᏂ'''</big> ᏙᏱᏗᏢ ᎦᏚᎲ [[ᏳᎳᏈ|ᏳᎳᏉᎢ]].
+<big>'''ᏳᎧᏪᏂ'''</big> ᎠᏰᏟ ᎤᏙᏢᏒ [[ᏳᎳᏈ|ᏳᎳᏉᎢ]]. [[ᎠᏂᏳᎧᏪᏂ]] [[ᏳᎧᏪᏂ ᎦᏬᏂᎯᏍᏗ|ᏳᎧᏪᏂ]] ᎠᏂᏬᏂᎭ.
 
 == ᏗᏓᏟᎶᏍᏔᏅ ==
 <gallery>
@@ -19,6 +19,8 @@ File:Maidan_Nezalezhnosti_(Kiev).jpg|[[ᎩᏰᏫ]]
 File:100_hryvnia_2005_b.jpg|[[ᏳᎧᏪᏂ ᎠᏕᎳ]]
 File:Borsch-ukr.jpg|[[ᏳᎧᏪᏂ ᎩᎦᎨᎦᎳᏗᏍᎩ ᎤᎦᎹ]]
 </gallery>
+
+[[Category:ᏳᎳᏈ]]
 
 [[ab:Украина]]
 [[ace:Ukraina]]
