*Empty MediaWiki Message*

--- a/ᎢᏔᎵᏱ.mw
+++ b/ᎢᏔᎵᏱ.mw
@@ -14,7 +14,7 @@
 | ᎠᏕᎳ = [[ᏳᎳᏈ ᎠᏕᎳ]]
 }}
 
-<big>'''ᎢᏔᎵᏱ'''</big> (ᎠᎴ '''ᎢᏓᎵ'''<ref>Cherokee New Testament</ref> ᎠᎴ '''ᏲᎶ''' ᎠᎴ '''ᎬᏩᎵᏲᏥ''') ᏙᏱᏗᏢ ᎦᏚᎲ ᎧᎸᎬᎢᏗᏢ [[ᏳᎳᏉᎢ]].
+<big>'''ᎢᏔᎵᏱ'''</big> (ᎠᎴ '''ᎢᏓᎵ'''<ref>Cherokee New Testament</ref> ᎠᎴ '''ᏲᎶ''' ᎠᎴ '''ᎬᏩᎵᏲᏥ''') ᎠᏰᏟ ᎤᏙᏢᏒ [[ᏳᎳᏉᎢ]]. [[ᎠᏂᎢᏔᎵ]] [[ᎠᏂᎢᏔᎵ ᎦᏬᏂᎯᏍᏗ|ᎢᏔᎵ]] ᎠᏂᏬᏂᎭ.
 
 == ᏙᏯᏗᏢ ᏗᏕᎬᏔᏛ ==
 {{Commonscat|Italy|ᏲᎶ}}
@@ -27,7 +27,7 @@
 
 {{stub}}
 
-[[Category:ᏳᎳᏛ]]
+[[Category:ᏳᎳᏈ]]
 [[Category:ᎠᏰᎵ ᏚᎾᏙᏢᏩᏗᏒ]]
 
 [[ab:Италиа]]
