*Empty MediaWiki Message*

--- a/ᏲᏂᎢ.mw
+++ b/ᏲᏂᎢ.mw
@@ -14,7 +14,7 @@
 | ᎠᏕᎳ = ᏲᏂᏱ ᎠᏕᎳ
 }}
 
-<big>'''ᏲᏂᏱ'''</big> ᏙᏱᏗᏢ ᎦᏚᎲ [[ᏳᎳᏈ|ᏳᎳᏉᎢ]] ᎠᎴ [[ᎡᏏᏱ|ᎡᏏᏲᎢ]].
+<big>'''ᏲᏂᏱ'''</big> ᎠᏰᏟ ᎤᏙᏢᏒ [[ᏳᎳᏈ|ᏳᎳᏉᎢ]] ᎠᎴ [[ᎡᏏᏱ|ᎡᏏᏲᎢ]]. [[ᎠᏂᏲᎾ]] [[ᎠᏂᏲᎾ ᎦᏬᏂᎯᏍᏗ|ᏲᏂ]] ᎠᏂᏬᏂᎭ.
 
 == ᏗᏓᏟᎶᏍᏔᏅ ==
 <gallery>
@@ -23,8 +23,8 @@ File:Banknote_5000_rubles_(1997)_front.jpg|[[ᏲᏂᏱ ᎠᏕᎳ]]
 File:Schi.jpg|[[ᏲᏂᏱ ᎠᎵᏍᏓᏴᏗ]]
 </gallery>
 
-[[Category:ᏓᎶᏂᎦᏍᏛ]]
-[[Category:ᏳᎳᏛ]]
+[[Category:ᎡᏏᏱ]]
+[[Category:ᏳᎳᏈ]]
 [[Category:ᎠᏰᎵ ᏚᎾᏙᏢᏩᏗᏒ]]
 
 [[ab:Урыстәыла]]
