*Empty MediaWiki Message*

--- a/ᏣᏩᏂᏏ.mw
+++ b/ᏣᏩᏂᏏ.mw
@@ -1,6 +1,6 @@
 {{Infobox Country
 | Long name = 日本国<br />''Nihon-koku''
-| Name = ᏣᏩᏂ
+| Name = ᏣᏆᏂᏱ
 | ᎦᏓᏘ = Flag of Japan.svg
 | Coat of arms = Imperial Seal of Japan.svg
 | Location = Japan-location-cia.gif
@@ -8,18 +8,18 @@
 | Area = 377,873
 | Population = 12,743,3494
 | Population year = 2007
-| ᎠᏰᎵᎤ ᎤᏒᎧᎵ ᎦᏬᏂᏏᏍᏗ = [[ᏣᏩᏂᏏ ᎦᏬᏂᎯᏍᏗ]]
+| ᎠᏰᎵᎤ ᎤᏒᎧᎵ ᎦᏬᏂᏏᏍᏗ = [[ᎠᏂᏣᏆᏂ ᎦᏬᏂᎯᏍᏗ|ᏣᏆᏂ]]
 | ᎠᏰᎵ ᏗᎦᎳᏫᎢᏍᏗ = [[ᏙᎩᏲ]]
 | ᎤᏔᏂᎢᏍᏗ ᎦᏚᎲᎢ = ᏙᎩᏲ
 | ᏚᎬᏫᏳᎯ ᏂᎰᏂ = [[ᏂᎰᏅ ᎤᎬᏫᏳᎯ ᎠᎩᎯᏙ|ᎠᎩᎯᏙ]]
-| ᎠᏕᎳ = ᏣᏩᏂᏏ ᎠᏕᎳ
+| ᎠᏕᎳ = ᏣᏆᏂ ᎠᏕᎳ
 }}
-ᏂᎰᏂ ᏙᏱᏗᏢ ᎦᏚᎲ ᎧᎸᎬᎢᏗᏢ [[ᎠᏏᎠ|ᎠᏏᏲᎢ]]. ᏣᏩᏂ ᎠᎵᏍᏓᏴᏗ: [[ᏑᏏ]]. [[ᏣᏩᏂᏏ ᎦᏬᏂᎯᏍᏗ]] ᎠᏬᏂᎭ. ᎤᎾᏤᎵ ᎠᏕᎳ [[ᏣᏩᏂᏏ ᎠᏕᎳ]] (¥).
+<big>'''ᏣᏆᏂᏱ''' ᎠᎴ '''ᏣᏩᏂ''' </big> ᎠᎴ '''ᏂᎰᏂ''' ᎠᏰᏟ ᎤᏙᏢᏒ ᎧᎸᎬᎢᏗᏢ [[ᎠᏏᎠ|ᎠᏏᏲᎢ]]. ᏣᏆᏂ ᎠᎵᏍᏓᏴᏗ: [[ᏑᏏ]]. [[ᎠᏂᏣᏆᏂ ᎦᏬᏂᎯᏍᏗ|ᏣᏆᏂ]] ᎠᏬᏂᎭ. ᎤᎾᏤᎵ ᎠᏕᎳ [[ᏣᏆᏂ ᎠᏕᎳ]] (¥).
 
 
 {{Stub}}
 
-[[Category:ᏓᎶᏂᎦᏍᏛ]]
+[[Category:ᎡᏏᏱ]]
 
 [[ab:Иапониа]]
 [[ace:Jeupun]]
