*Empty MediaWiki Message*

--- a/ᏩᏙᎵ.mw
+++ b/ᏩᏙᎵ.mw
@@ -2,6 +2,15 @@
 
 ᎠᏂᏍᎦᏯ <big>'''ᏩᏙᎵ'''</big> ([[ᎠᏂᎶᎻ ᎧᏬᏂᎯᏍᏗ|ᎶᎻ]] ᎠᎴ [[ᎩᎵᏏ]]: '''''Penis''''') ᎤᏂᎭ.
 
+== ᏗᏓᏟᎶᏍᏔᏅ ==
+<gallery>
+File:Penis_semi_erect.JPG|ᎤᏍᏗ ᏲᏁᎦ ᏩᏙᎵ
+File:Male_circumcised_masturbation.jpg|ᎤᏔᎾ ᏲᏁᎦ ᏩᏙᎵ
+File:Human_penis_both_flaccid_and_erect.jpg|ᎤᏔᎾ ᎠᎴ ᎤᏍᏗ ᎬᎿᎨᎢ ᏩᏙᎵ
+File:Horse_penis.jpg|ᏐᏈᎵ ᏩᏙᎵ
+</gallery>
+
+
 [[Category:ᏄᏍᏛ ᎠᏰᎸ]]
 
 [[af:Penis]]
