*Empty MediaWiki Message*

--- a/ᎩᎵᏣᎢᏍ.mw
+++ b/ᎩᎵᏣᎢᏍ.mw
@@ -12,7 +12,7 @@
 | ᎠᏕᎳ = [[ᎬᎩᏏ ᎠᏕᎳ]]
 }}
 
-<big>'''ᎬᎩᏍᏔᏂ'''</big> ᏙᏱᏗᏢ ᎦᏚᎲ [[ᎡᏏᏱ|ᎡᏏᏲᎢ]].
+<big>'''ᎬᎩᏍᏔᏂ'''</big> ᎠᏰᏟ ᎤᏙᏢᏒ [[ᎡᏏᏱ|ᎡᏏᏲᎢ]]. [[ᎠᏂᎬᎩᏏ]] [[ᎬᎩᏏ]] ᎠᏂᏬᏂᎭ.
 
 == ᏗᏓᏟᎶᏍᏔᏅ ==
 <gallery>
@@ -20,6 +20,8 @@ File:KyrgyzstanP15-1Som-1999(2000)_a.jpg|[[ᎬᎩᏏ ᎠᏕᎳ]] <br> Кыргы
 File:Киргизские_кибитки_на_реке_Чу.jpg|[[ᎬᎩᏏ ᎦᎵᏦᏕ]] <br> Боз үй ''(Кибитка)''
 File:Beschbarmak.jpg|[[ᎬᎩᏏ ᎠᎵᏍᏓᏴᏗ]]
 </gallery>
+
+[[Category:ᎡᏏᏱ]]
 
 [[ace:Kyrgyzstan]]
 [[af:Kirgisië]]
