*Empty MediaWiki Message*

--- a/ᏔᏥᎩᏍᏕᏂ.mw
+++ b/ᏔᏥᎩᏍᏕᏂ.mw
@@ -12,7 +12,7 @@
 | ᎠᏕᎳ = [[ᏔᏥᎩ ᎠᏕᎳ]]
 }}
 
-<big>'''ᏔᏥᎩᏍᏔᏂ'''</big> ᏙᏱᏗᏢ ᎦᏚᎲ [[ᎡᏏᏱ|ᎡᏏᏲᎢ]].
+<big>'''ᏔᏥᎩᏍᏔᏂ'''</big> ᎠᏰᏟ ᎤᏙᏢᏒ [[ᎡᏏᏱ|ᎡᏏᏲᎢ]]. [[ᎠᏂᏔᏥᎩ]] [[ᏔᏥᎩ]] ᎠᏂᏬᏂᎭ.
 
 == ᏗᏓᏟᎶᏍᏔᏅ ==
 <gallery>
@@ -20,6 +20,8 @@ File:Dushanbe_panorama_07.jpg|[[ᏚᏌᏂᏇ]] <br> Душанбе
 File:5_Somoni_TJ_2001.gif|[[ᏔᏥᎩ ᎠᏕᎳ]] <br> Сомонӣ
 File:Tajik_dastarkhan_meal.jpg|[[ᏔᏥᎩ ᎠᎵᏍᏓᏴᏗ]]
 </gallery>
+
+[[Category:ᎡᏏᏱ]]
 
 [[ace:Tajikistan]]
 [[af:Tadjikistan]]
