--- a/ᎤᏍᏇᎩᏍᏔᏂ.mw
+++ b/ᎤᏍᏇᎩᏍᏔᏂ.mw
@@ -5,14 +5,14 @@
 | Coat of arms = Coat_of_Arms_of_Uzbekistan.svg
 | Location = Узбекистан_на_глобусе.svg
 | size=200px
-| ᎠᏰᎵᎤ ᎤᏒᎧᎵ ᎦᏬᏂᏏᏍᏗ = [[ᎤᏍᏇᎩ ᎦᏬᏂᎯᏍᏗ|ᎤᏍᏇᎩ]] <br> [[ᎧᎳᎧᎵᏆᎩ ᎦᏬᏂᎯᏍᏗ|ᎧᎳᎧᎵᏆᎩ]] <br> [[ᏲᏂᏱ ᎦᏬᏂᎯᏍᏗ|ᏲᏂᏱ]]
+| ᎠᏰᎵᎤ ᎤᏒᎧᎵ ᎦᏬᏂᏏᏍᏗ = [[ᎠᏂᎤᏍᏇᎩ ᎦᏬᏂᎯᏍᏗ|ᎤᏍᏇᎩ]] <br> [[ᎧᎳᎧᎵᏆᎩ ᎦᏬᏂᎯᏍᏗ|ᎧᎳᎧᎵᏆᎩ]] <br> [[ᎠᏂᏲᎾ ᎦᏬᏂᎯᏍᏗ|ᏲᏂᏱ]]
 | ᎠᏰᎵ ᏗᎦᎳᏫᎢᏍᏗ = [[Tashkent|ᏔᏍᎨᏂᏘ]]
 | ᎤᏔᏂᎢᏍᏗ ᎦᏚᎲᎢ = ᏔᏍᎨᏂᏘ
 | ᏚᎬᏫᏳᎯ ᏂᎰᏂ = [[ᎢᏍᎳᎻ ᎠᏆᏚᎦᏂᏰᏫᏥ ᎧᎵᎼᏫ]] <br> <small>Islam Abdug‘aniyevich Karimov <br> ''(Ислом Абдуғаниевич Каримов)''</small> <br> [[ᏌᏩᎧᏘ ᎻᎶᎼᏃᏫᏥ ᎻᏏᏲᏰᏫ]] <br> <small>Shavkat Miromonovich Mirziyoyev <br> ''(Шавкат Мираманович Мирзиёев)''</small>
 | ᎠᏕᎳ = [[ᎤᏍᏇᎩ ᎠᏕᎳ]]
 }}
 
-<big>'''ᏔᏥᎩᏍᏔᏂ'''</big> ᏙᏱᏗᏢ ᎦᏚᎲ [[ᎡᏏᏱ|ᎡᏏᏲᎢ]].
+<big>'''ᎤᏍᏇᎩᏍᏔᏂ'''</big> ᎠᏰᏟ ᎤᏙᏢᏒ [[ᎡᏏᏱ|ᎡᏏᏲᎢ]]. [[ᎠᏂᎤᏍᏇᎩ]] [[ᎤᏍᏇᎩ]] ᎠᏂᏬᏂᎭ.
 
 == ᏗᏓᏟᎶᏍᏔᏅ ==
 <gallery>
@@ -20,6 +20,8 @@ File:International_Business_Center._Tashkent_city.jpg|[[ᏔᏍᎨᏂᏘ]] <br> T
 File:25Som.jpg|[[ᎤᏍᏇᎩ ᎠᏕᎳ]] <br> O‘zbek so‘m
 File:Tandyr_Kabob.JPG|[[ᏔᏥᎩ ᎠᎵᏍᏓᏴᏗ]]
 </gallery>
+
+[[Category:ᎡᏏᏱ]]
 
 [[ace:Uzbèkistan]]
 [[af:Oesbekistan]]
