--- a/ᎡᏏᏱ.mw
+++ b/ᎡᏏᏱ.mw
@@ -11,12 +11,12 @@
 
 === ᎧᎸᎬᎢᏗᏢ ᏓᎶᏂᎦᏍᏛ ===
 * [[Hong Kong|ᎰᏂ ᎪᏂ]]
-* [[Japan|ᏣᏩᏂᏏ]]
-* [[Macau]]
+* [[Japan|ᏣᏆᏂᏱ]]
+* [[Macau|ᎹᎧᎤ]]
 * [[Mongolia|ᎹᏂᎪᎵᏱ]]
-* [[North Korea|ᎪᎵᏯ]]
+* [[North Korea|ᏧᏴᏢ ᎪᎵᏯ]]
 * [[China|ᏥᎾ]]
-* [[ᎤᎦᎾᏭ ᎢᏗᎵ ᎪᎴᎠ]] <!-- south korea -->
+* [[ᏧᎦᎾᏭ ᎪᎵᏯ]]
 * [[Taiwan|ᏔᎢᏩᏂ]]
 
 === ᎤᏴᏢ ᎢᏗᏢ ᏗᏕᎬᏔᏛ ===
