*Empty MediaWiki Message*

--- a/ᎹᏂᎪᎵᎠ.mw
+++ b/ᎹᏂᎪᎵᎠ.mw
@@ -5,14 +5,14 @@
 | Coat of arms = State_emblem_of_Mongolia.svg
 | Location = Mongolia_(orthographic_projection).svg
 | size=200px
-| ᎠᏰᎵᎤ ᎤᏒᎧᎵ ᎦᏬᏂᏏᏍᏗ = [[ᎼᏂᎪᎵ ᎦᏬᏂᎯᏍᏗ|ᎼᏂᎪᎵ]]
+| ᎠᏰᎵᎤ ᎤᏒᎧᎵ ᎦᏬᏂᏏᏍᏗ = [[ᎠᏂᎼᏂᎪᎵ ᎦᏬᏂᎯᏍᏗ|ᎼᏂᎪᎵ]]
 | ᎠᏰᎵ ᏗᎦᎳᏫᎢᏍᏗ = [[Ulan Bator|ᎤᎳᏂᏆᏔ]]
 | ᎤᏔᏂᎢᏍᏗ ᎦᏚᎲᎢ = ᎤᎳᏂᏆᏔ
 | ᏚᎬᏫᏳᎯ ᏂᎰᏂ = [[ᏣᎯᎠᎩᏂ ᎡᎵᏇᎩᏙᏥ]] <br> <small>Цахиагийн Элбэгдорж <br> ''(Tsakhiagiin Elbegdorj)''</small> <br> [[ᏑᎯᏆᏔᎵᏂ ᏆᏘᏉᎵᏗ]] <br> <small>Сүхбаатарын Батболд <br> ''(Sükhbaataryn Batbold)''</small>
 | ᎠᏕᎳ = [[ᎼᏂᎪᎵ ᎠᏕᎳ]]
 }}
 
-<big>'''ᎼᏂᎪᎵᏱ'''</big> ᏙᏱᏗᏢ ᎦᏚᎲ [[ᎡᏏᏱ|ᎡᏏᏲᎢ]].
+<big>'''ᎼᏂᎪᎵᏱ'''</big> ᎠᏰᏟ ᎤᏙᏢᏒ [[ᎡᏏᏱ|ᎡᏏᏲᎢ]]. [[ᎠᏂᎼᏂᎪᎵ]] [[ᎼᏂᎪᎵ]] ᎠᏂᏬᏂᎭ.
 
 == ᏗᏓᏟᎶᏍᏔᏅ ==
 <gallery>
@@ -20,6 +20,8 @@ File:UlaanBaatar-2009.jpg|[[ᎤᎳᏂᏆᏔ]] <br> Ulan Bator
 File:10000_Tugriks_-_Recto.jpg|[[ᎼᏂᎪᎵ ᎠᏕᎳ]] <br> Монгол төгрөг
 File:MongolianStew01.JPG|[[ᎼᏂᎪᎵ ᎠᎵᏍᏓᏴᏗ]]
 </gallery>
+
+[[Category:ᎡᏏᏱ]]
 
 [[ace:Mongolia]]
 [[kbd:Монгол]]
