--- a/ᎡᏏᏱ.mw
+++ b/ᎡᏏᏱ.mw
@@ -48,12 +48,12 @@
 
 === ᏭᏕᎵᎬᏗᏢ ᏗᏕᎬᏔᏛ ===
 * [[Armenia|ᎠᎺᏂᏱ]]
-* [[Azerbaijan|ᎠᏌᏆᎢᏣᏂ]]
+* [[Azerbaijan|ᎠᏎᏆᏣᏂ]]
 * [[Bahrain|ᏆᎴᎢᏂ]]
 * [[Cyprus|ᏌᏈ]]
 * [[Georgia|ᏣᏥᏱ]]
 * [[Iraq|ᎢᎳᏈ]]
-* [[Iran|ᎢᎳᏂ]]
+* [[Iran|ᎢᎳᏂ (ᏋᏏᏱ)]]
 * [[Israel|ᎢᏏᎵ]]
 * [[Jordan|ᏦᏓᏂ]]
 * [[Kuwait|ᎫᏪᏘ]]
@@ -61,7 +61,7 @@
 * [[Oman|ᎣᎹᏂ]]
 * [[Palestine|ᏆᎴᏍᏘᏂ]]
 * [[Qatar|ᏆᏔᎵ]]
-* [[Saudi Arabia]]
+* [[Saudi Arabia|ᏐᏗ-ᎠᎴᏈᏱ]]
 * [[Syria|ᏏᎵᏱ]]
 * [[Turkey|ᎬᏂᏱ]]
 * [[United Arab Emirates]]
