--- a/ᎢᏃᏙ-ᎡᏮᎶᏩ_ᎦᏬᏂᎯᏍᏗ.mw
+++ b/ᎢᏃᏙ-ᎡᏮᎶᏩ_ᎦᏬᏂᎯᏍᏗ.mw
@@ -1,1 +1,7 @@
-fuck u
+ᎮᎳ ᏂᎦᏓ ᏧᏂᏬᏂᎯᏍᏗ ᎠᏂᏳᏁᎦ ᏧᏂᏬᏂᏍᎪᎢ - [[ᎩᎵᏏ ᎦᏬᏂᎯᏍᏗ|ᎩᎵᏏ]], [[Spanish|ᏍᏆᏂ]], [[ᎠᏛᏥ ᎦᏬᏂᎯᏍᏗ|ᎠᏂᏓᏥ]],[[French|ᎦᎸᏥ]], [[Italian|ᎬᏩᎵᏲᏥᎢ]], [[Portuguese|ᏉᏧᎦᎵ]], ᎠᎴ [[Russian|ᏲᏂᎢ]] ᏂᎦᏓ ᏐᏉ ᎢᏳᏩᎧᏔ ᏐᏉ ᎦᏬᏂᎯᏍᏗ ᏥᎨᏒ.<!-- language names from Cherokee/Tsalagi Common Locale Data Repository (CLDR) -->
+
+ᎯᎳᎢᏳ, ᎤᏓᏍᏈᏍᏓ ᎠᏂᏴᏫ ᎢᎾᏗᏯ ᎠᏁᎮᎢ. ᎯᎠ ᎠᏂᏴᏫ ᏄᏓᎴ ᏅᏃ ᏧᎾᏚᎵᏍᎨᎢ. ᏃᏉ ᎤᏓᏍᏈᏍᏓ ᏄᏓᎴ ᎠᏰᎵ ᎠᏁᎰᎢ, ᎠᏎᏍᎩᏂ, ᏃᏉᏃ ᏍᏈᏍᏓ ᏄᏓᎴ ᎦᏬᏂᎯᏍᏗ ᏧᏂᏬᏂᎰᎢ. ᏂᎪᎯᎸᎢ ᏱᏂᎦᎵᏍᏘᎰᎢ, ᏐᏉ ᎦᏬᏂᎯᏍᏗ ᏧᏂᏬᏂᎰᎢ ᏍᏈᏍᏓ ᎠᏂᏴᏫ, ᎦᏬᏂᎯᏍᏗ ᎪᎱᏍᏗ ᏄᏓᎴ ᏂᎦᎵᏍᏘᎰᎢ. ᎯᎠᏍᏊ: ᎠᏂᎶᎻ ᎳᏘᏂ ᏧᏂᏬᏂᎮᎢ, ᎠᏎᏃ ᏃᏉ ᎠᏂᏍᏆᏂ ᏤᏍᏗ ᎳᏘᏂ ᏳᏂᏬᏂᎰᎢ. ᎠᏍᏆᏂ ᏧᏂᏬᏂᎰᎢ. ᎯᎠᏍᏊ, ᎳᏘᏂ ᏃᎴ [[Greek|ᎠᎪᎢ]], ᏃᎴ ᎠᏂᎨᎵᏘᎦ ᏧᏂᏬᏂᎯᏍᏗ ᏐᏉᏏᏓᏁᎳ. ᎯᎠᏃ ᎦᏓᎧ - ᎯᎳᎢᏳ, ᏐᏉ ᎦᏬᏂᎯᏍᏗ ᏥᎨᏒᎢ.
+
+[[Category:ᏓᎶᏂᎦᏍᏛ]]
+[[Category:ᏳᎳᏛ]]
+[[Category:ᎦᏬᏂᎯᏍᏗ]]
