--- a/ᎠᏂᏲᎾ.mw
+++ b/ᎠᏂᏲᎾ.mw
@@ -3,7 +3,7 @@
 | style="background:#f9f9f9;" align="center" colspan=2 |
 {| border="0" cellpadding="1" cellspacing="0"
 |-
-| align="center" width="140px" | <big><big><big>'''ᎠᏂᏲᎾ''' </big></big></big> <br> <big>'''''Русские'''''</big>
+| align="center" width="140px" | <big><big><big>'''ᎠᏂᏲᎾ''' </big></big></big> <br> <big>'''''русские'''''</big>
 |}
 |-
 | align=center colspan=2 |<table border=0 align="center">
