*Empty MediaWiki Message*

--- a/ᏫᎵ_ᏥᏍᏚ.mw
+++ b/ᏫᎵ_ᏥᏍᏚ.mw
@@ -1,1 +1,4 @@
-'''ᏫᎵ ᏥᏍᏚ Bill Rabbit''' [[File:http://www.nativeartsofamerica.com/files/artist/BillRabbit.JPG]]ᎠᏗᏍᎬ ᎠᏍᎪᎵᏴ ᎾᎿ ᎫᏩᏲ (PRYOR), ᎣᎧᎶᏃᎻ.  ᏗᏟᎶᏍᏔᏅᎲᏍᎩ ᎠᎴ ""ᏣᎳᎩ ᎠᏰᏟ ᏧᎬᏩᎶᏗ  ᎠᏍᏆᏂᎪᏛ""
+'''ᏫᎵ ᏥᏍᏚ Bill Rabbit''' 
+
+ ᏫᎵ ᏥᏍᏚ ᎠᏗᏍᎬ ᎠᏍᎪᎵᏴ ᎾᎿ ᎫᏩᏲ (PRYOR), ᎣᎧᎶᏃᎻ.  ᏗᏟᎶᏍᏔᏅᎲᏍᎩ ᎠᎴ ""ᏣᎳᎩ ᎠᏰᏟ ᏧᎬᏩᎶᏗ  ᎠᏍᏆᏂᎪᏛ"" 
+ᎤᏕᏅ______.
