--- a/ᏫᎵ_ᏥᏍᏚ.mw
+++ b/ᏫᎵ_ᏥᏍᏚ.mw
@@ -1,4 +1,4 @@
 '''ᏫᎵ ᏥᏍᏚ Bill Rabbit''' 
 
  ᏫᎵ ᏥᏍᏚ ᎠᏗᏍᎬ ᎠᏍᎪᎵᏴ ᎾᎿ ᎫᏩᏲ (PRYOR), ᎣᎧᎶᏃᎻ.  ᏗᏟᎶᏍᏔᏅᎲᏍᎩ ᎠᎴ ""ᏣᎳᎩ ᎠᏰᏟ ᏧᎬᏩᎶᏗ  ᎠᏍᏆᏂᎪᏛ"" 
-ᎤᏕᏅ______.
+ᎤᏕᏅ1946 ᎾᎿ Casper, WY. ᎤᏲᎱᏒ ᎤᎾᏙᏓᏉᏅᎯ ᎧᏬᏂ 9, 2012.
