r2.7.2) (Robot: Modifying [[bat-smg:Šarontios]]

--- a/ᏩᏓᏚᎦ.mw
+++ b/ᏩᏓᏚᎦ.mw
@@ -100,7 +100,7 @@ Dragonflies ᎤᎭ ᎤᏙᎯᏳ ᎣᏍᏛ ᎠᎪᏩᏛᏗ ᎤᏍᏆᎸᎲ ᎤᎾ
 [[Category:ᏨᏍᎪᏱ]]
 
 [[af:Naaldekoker]]
-[[bat-smg:Laumžėrgis]]
+[[bat-smg:Šarontios]]
 [[bjn:Sisiur]]
 [[bn:ফড়িং]]
 [[ca:Anisòpter]]
