Automatically replacing Leonardo self.jpg with superior quality file, Leonardo da Vinci - Self-Portrait - WGA12798.jpg

--- a/ᎠᏂᎢᏔᎵ.mw
+++ b/ᎠᏂᎢᏔᎵ.mw
@@ -36,7 +36,7 @@
     <td><small><div style="background-color:#fee8ab">[[Valentino|ᏩᎴᏂᏘᏃ]]</small></td>
   </tr>
   <tr>
-    <td><small>[[File:Leonardo_self.jpg|60x70px]]</small></td>
+    <td><small>[[File:Leonardo da Vinci - Self-Portrait - WGA12798.jpg|60x70px]]</small></td>
        <td><small>[[File:Del_Piero.jpg|60x70px]]</small></td>
      <td>[[File:Laura_Pausini_2009.04.30_024.jpg|60x70px]]</td>
        <td><small>[[File:Justus_Sustermans_-_Portrait_of_Galileo_Galilei,_1636.jpg|60x70px]]</small></td>
